remove unused imports in lab1

--- a/notebooks/lab1.ipynb
+++ b/notebooks/lab1.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
     "import cv2\n",
     "import torch\n",
     "\n",
-    "from src.utils import convolve, apply_filters, min_max_normalize\n",
+    "from src.utils import convolve, apply_filters\n",
     "from src.plot_tools import imshow"
    ]
   },
