--- a/notebooks/lab1.ipynb
+++ b/notebooks/lab1.ipynb
@@ -59,22 +59,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inserted path!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys, os\n",
-    "\n",
-    "ROOT_PATH = os.path.abspath(\"..\")\n",
-    "if ROOT_PATH not in sys.path:\n",
-    "    sys.path.insert(0, ROOT_PATH)\n",
-    "    print(\"Inserted path!\")\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "import cv2\n",
@@ -202,7 +189,7 @@
    ],
    "source": [
     "# Read the image (in BGR format)\n",
-    "image_np = cv2.imread(os.path.join(ROOT_PATH, \"data\", \"lab1\", \"pugs.jpg\"))\n",
+    "image_np = cv2.imread(os.path.join(\"data\", \"lab1\", \"pugs.jpg\"))\n",
     "\n",
     "# Convert the image to RGB\n",
     "image_np = cv2.cvtColor(image_np, cv2.COLOR_BGR2RGB)\n",
