--- a/notebooks/lab3.ipynb
+++ b/notebooks/lab3.ipynb
@@ -81,19 +81,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserted path!\n",
       "Using device: cuda\n"
      ]
     }
    ],
    "source": [
-    "import sys, os\n",
-    "\n",
-    "ROOT_PATH = os.path.abspath(\"..\")\n",
-    "if ROOT_PATH not in sys.path:\n",
-    "    sys.path.insert(0, ROOT_PATH)\n",
-    "    print(\"Inserted path!\")\n",
-    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -105,7 +97,7 @@
     "from src.trainer import Trainer\n",
     "from src.plot_tools import plot_history\n",
     "\n",
-    "DATA_PATH = os.path.join(ROOT_PATH, \"data\")\n",
+    "DATA_PATH = \"data\"\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "NUM_EPOCHS = 10\n",
     "BATCH_SIZE = 64\n",
