replace os.path with pathlib

--- a/notebooks/lab1.ipynb
+++ b/notebooks/lab1.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
     "import cv2\n",
@@ -189,7 +189,7 @@
    ],
    "source": [
     "# Read the image (in BGR format)\n",
-    "image_np = cv2.imread(os.path.join(\"data\", \"lab1\", \"pugs.jpg\"))\n",
+    "image_np = cv2.imread(Path(\"data\", \"lab1\", \"pugs.jpg\"))\n",
     "\n",
     "# Convert the image to RGB\n",
     "image_np = cv2.cvtColor(image_np, cv2.COLOR_BGR2RGB)\n",
