--- a/notebooks/lab3.ipynb
+++ b/notebooks/lab3.ipynb
@@ -43,7 +43,7 @@
     "* VGGNet (наприклад, VGG16);\n",
     "* Inception (наприклад, GoogLeNet / Inception v1);\n",
     "* ResNet (наприклад, ResNet18 або ResNet34);\n",
-    "* Будь-яку iншу сучасну архiтектуру за [даним посиланням](https://huggingface.co/papers/trending).\n",
+    "* Будь-яку iншу сучасну архiтектуру.\n",
     "\n",
     "4. Навчити побудованi мережi на завантаженому датасетi. Дуже рекомендується навчати моделi на GPU. Якщо у вас немає CUDA-сумiсної вiдеокарти, використовуйте [Google Colab](https://colab.research.google.com/).\n",
     "\n",
@@ -163,7 +163,7 @@
     "* VGGNet (наприклад, VGG16);\n",
     "* Inception (наприклад, GoogLeNet / Inception v1);\n",
     "* ResNet (наприклад, ResNet18 або ResNet34);\n",
-    "* Будь-яку iншу сучасну архiтектуру за [даним посиланням](https://huggingface.co/papers/trending).\n",
+    "* Будь-яку iншу сучасну архiтектуру.\n",
     "\n",
     "### 4. Навчити побудованi мережi на завантаженому датасетi. Дуже рекомендується навчати моделi на GPU. Якщо у вас немає CUDA-сумiсної вiдеокарти, використовуйте [Google Colab](https://colab.research.google.com/)."
    ]
@@ -308,7 +308,7 @@
    "source": [
     "## Висновок\n",
     "\n",
-    "В ході виконання роботи було завантажено, передоброблено та розділено датасет FashionMNIST на тренувальну, валідаційну та тестову вибірки, реалізовано архітектури згорткових нейронних мереж VGG13 та ResNet18. Було навчено мережі на завантаженому датасеті з використанням різних гіперпараметрів та побудовано графіки навчання мереж.\n",
+    "В ході виконання роботи було завантажено, передоброблено та розділено датасет CIFAR-10 на тренувальну, валідаційну та тестову вибірки, реалізовано архітектури згорткових нейронних мереж VGG13 та ResNet18. Було навчено мережі на завантаженому датасеті з використанням різних гіперпараметрів та побудовано графіки навчання мереж.\n",
     "\n",
     "VGG13 демонструє найкращі та найбільш оптимальні з точки зору швидкості збіжності, кількості параметрів і точності результати для обраного набору данох CIFAR-10."
    ]
