create src.train module

--- a/notebooks/lab2.ipynb
+++ b/notebooks/lab2.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 10027,
@@ -107,7 +107,7 @@
     "from torch.utils.data import DataLoader, random_split\n",
     "\n",
     "from src.models.lenet import LeNet5\n",
-    "from src.trainer import Trainer\n",
+    "from src.train.trainer import Trainer\n",
     "from src.plot_tools import plot_history\n",
     "\n",
     "DATA_PATH = \"data\"\n",
