--- a/notebooks/lab4.ipynb
+++ b/notebooks/lab4.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 10027,
@@ -109,7 +109,7 @@
     "from torch.utils.data import DataLoader, random_split\n",
     "\n",
     "from src.models.vggnet import VGG13SE, VGG13CBAM\n",
-    "from src.trainer import Trainer\n",
+    "from src.train.trainer import Trainer\n",
     "from src.plot_tools import plot_history\n",
     "\n",
     "DATA_PATH = \"data\"\n",
