--- a/notebooks/lab3.ipynb
+++ b/notebooks/lab3.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "mn9TJaGIX97z"
    },
@@ -94,7 +94,7 @@
     "\n",
     "from src.models.vggnet import VGG13\n",
     "from src.models.resnet import ResNet18\n",
-    "from src.trainer import Trainer\n",
+    "from src.train.trainer import Trainer\n",
     "from src.plot_tools import plot_history\n",
     "\n",
     "DATA_PATH = \"data\"\n",
